--- a/src/main.scss
+++ b/src/main.scss
@@ -25,7 +25,7 @@ div[class^="uploadDropModal-"][class*=" error-"] {
       visibility: visible;
       display: block;
       margin-top: 10px;
-      content: 'I can only take up to 25 inches';
+      content: "I can only take up to 25 inches";
     }
   }
 
