--- a/src/main.scss
+++ b/src/main.scss
@@ -4,7 +4,7 @@ div[class^="uploadDropModal-"][class*=" error-"] {
 
     &::after {
       visibility: visible;
-      background: url("https://i.pinimg.com/originals/d0/e4/0a/d0e40ae38b08c9e9508c26b63e5990b8.png");
+      background: url("https://media.discordapp.net/attachments/1139236760484847627/1139237885216829601/d0e40ae38b08c9e9508c26b63e5990b8.png");
       position: absolute;
       height: 150px;
       display: block;
