--- a/src/main.scss
+++ b/src/main.scss
@@ -1,4 +1,4 @@
-div[class^="uploadDropModal-"][class*=" error-"] {
+div[class^="uploadDropModal-"][class*=" error-"], div[class^='artContainer-'] {
   div[class^="icons-"] {
     visibility: hidden;
 
